Fix spacing between form label and input components

--- a/client/src/components/Register/Register.css
+++ b/client/src/components/Register/Register.css
@@ -22,3 +22,11 @@ p {
     margin-inline-start: 0px;
     margin-inline-end: 0px;
 }
+
+.signup_wrapper {
+    padding-top: 65px;
+}
+
+.col-form-label-sm {
+    margin-bottom: .1rem;
+}
